--- a/style.css
+++ b/style.css
@@ -4,7 +4,19 @@ body{
     color: antiquewhite;
     margin:0;
 }
-
+.logo{
+    font-weight: bold;
+    margin-top: 0;
+    padding-left: 40px;
+    padding-right: 40px;
+    position: relative;
+    top: 40px;
+   
+    display: inline-block;
+    margin-left: 30px;
+   
+   
+}
 main{
     background-color: #4361ee;
 }
@@ -14,8 +26,11 @@ main{
     list-style-type: none;
     gap: 2em;
     margin-left: 150px;
+    margin-right: 100px;
    padding-top: 30px;
    padding-right: 15px;
+   position: relative;
+   top: -30px;
 }
 
 .bigdiv{
@@ -27,10 +42,13 @@ main{
 
 }
 .donna{
-    width: 600px;
+    width: 70%;
+    height: 70%;
     border-radius: 3px;
     padding-bottom: 30px;
     margin-bottom: 50px;
+    position: relative;
+    bottom: 50px;
 }
 .futurenow{
     font-size: 40px;
@@ -41,11 +59,12 @@ main{
     padding-left: 8px;
 }
 .para1{
-    font-size: 30px;
+    font-size: 33px;
     width: 70%;
     margin-right: 150px;
     background-color: #3a0ca3;
-    border-radius: 3px;
+    border-radius: 5px;
+    padding-right: 10px;
     padding-left: 10px;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -53,16 +72,18 @@ main{
 }
 .sub{
     margin-left: 20px;
+    margin-top: 10px;
     border: none;
-    border-radius: 3px;
+    border-radius: 10px;
     color:antiquewhite;
     background-color:#3a0ca3;
-    padding-left: 4px;
-    padding-right: 4px;
-    width:10%;
-    height: 10%;
+    padding-top: 2px;
+  
+    width:100px;
+    height: 60px;
     font-weight: bold;
-    font-size: 15px;
+    font-size: 18px;
+    
 }
 .main2{
     background-color: #012a4a;
@@ -85,6 +106,7 @@ main{
     padding-top: 20px;
     border-radius: 4px;
     height: 400px;
+    width: auto;
 }
 .hope{
     margin-top: 200px;
@@ -116,6 +138,9 @@ main{
     margin-top: 40px;
     margin-bottom: 40px;
     border-radius: 5px;
+    position: relative;
+    bottom: 30px;
+    
 }
 .aggiorn{
     margin-left: 500px;
@@ -130,6 +155,7 @@ main{
     position: relative;
     bottom: 20px;
     right:50px;
+    font-size: 15px;
 }
 .wanna{
     font-size: 24px;
@@ -146,4 +172,12 @@ main{
     background-color: #012a4a;
     padding-top: 5px;
     padding-bottom: 6px;
+}
+.discover{
+    text-decoration: underline;
+}
+.news-back{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: antiquewhite ;
 }
